--- a/main-style.css
+++ b/main-style.css
@@ -1,55 +1,58 @@
 
 body {
-	background-color:#efeee7;
+	background:#efeee7;
 	font-family:"Georgia",Times New Roman,Times,serif;
+	font-size:18px;
+	line-height:150%;
 	color:#333333;
 	padding:0px;
 	margin:0px;
 }
 
 header {
-	background-color:#d21034;
+	background:#d21034;
 }
 
 h1 {
 	background-color:#333333;
 	font-size:28px;
 	text-align:center;
-	color:lightgrey;
-	padding:20px;
+	color:#eee;
+	padding:20px 0;
+	margin:0;
+	margin-bottom:20px;
 }
 
 h2 {
 	font-size:24px;
-	margin:25px;
 
-}
-
-.container {
-	width:1024px;
-	height:auto;
-	text-align:left;
-	float:center;
-	margin:auto;
-}
-
-#bio-image {
-	float:left;
-	width:200px;
-	height:auto;
-	margin:25px;
-}
-
-#main-bio {
-	float:left;
-	width:70%;
-}
-
-#contact-info {
-	float:right;
-	width:30%;
 }
 
 a {
 	color:#d21034;
+}
+
+.container {
+	width: 1024px;
+	margin: 0 auto;
+}
+
+#main-bio,
+#contact-info,
+#bio-image {
+	float: left;
+}
+
+#main-bio {
+	width: 70%;
+}
+
+#contact-info {
+	width: 30%;
+}
+
+#bio-image {
+	width: 200px;
+	height: auto;
+	margin-right: 20px;
 }
